<resources>
    <string name="app_name">Campus Shop</string>
    <string name="price_placeholder">Price:</string>
    <string name="building_placeholder">Building:</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_line">Buy things faster</string>
    <string name="appName">Campus Shop</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create Account</string>
    <string name="card_shop_item_title_example">Title</string>
    <string name="price_example_placeholder">100</string>
    <string name="building_example">6.1</string>
    <string name="password">Password</string>
    <string name="sign_up_placeholder">Sign Up</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="password_reanimation_message">Для восстановления пороля введите свой email на который зарегистрирован аккаунт</string>
    <string name="password_reanimation">Восстановление пороля</string>
    <string name="email_example">example@gmail.com</string>
    <string name="username_example">Данила Раздобаров</string>
    <string name="sign_out">Sign out</string>
    <string name="shop_item_card_title">Заголовок карточки товара</string>
    <string name="category">Category</string>
    <string name="add_item_name">Add name for your item</string>
    <string name="add_item_price">Add price for your item</string>
    <string name="title">Title:</string>
    <string name="add_item_description">Description:</string>
    <string name="add_description_for_your_item">Add description for your item</string>
    <string name="add_building_number">Add building number</string>
    <string name="new_avatar">New avatar</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_new_surname">Enter new surname</string>
    <string name="enter_new_email_address">Enter new Email address</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="add_photo">Add Photo</string>
    <string name="add">Add</string>
    <string name="finish">Finish</string>
    <string name="add_new_item">Add new item</string>
    <string name="edit_profile">Edit profile</string>
    <string name="map">Map</string>
    <string name="active_ads">Active Ads</string>
    <string name="archive_ads">Archive ads</string>
    <string name="repeat_password">Repeat password</string>
    <string name="enter_new_building">Enter new building</string>
    <string name="text_to_seller">Text to seller</string>
    <string name="category_placeholder">Category:</string>

    <string-array name="categories">
        <item>Food</item>
        <item>Services</item>
        <item>Clothes</item>
        <item>Smoking</item>
        <item>Things</item>
        <item>Homework</item>
    </string-array>

</resources>